<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_summary_name">Name: <xliff:g id="sumary_name">%s</xliff:g></string>
    <string name="order_button">Order</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <!-- Texto enviado por e-mail -->
    <string name="thank_you">Thank you!</string>
    <string name="add">Add</string>
</resources>
