<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
            style="@style/HeaderTextStyle" />
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/whipped_cream"
            android:textAppearance="?android:textAppearanceMedium" />
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/chocolate"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:orientation="horizontal"

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="decrement"
                android:text="-"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="increment"
                android:text="+"/>

        </LinearLayout>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/order_summary"
            style="@style/HeaderTextStyle" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order_button"/>
    </LinearLayout>
</ScrollView>